--- a/HTML5/WebContent/animation_03.html
+++ b/HTML5/WebContent/animation_03.html
@@ -37,7 +37,7 @@
 	}
 	
 	//var c = "";
-	function heart(){ //하드 
+	function heart(){ //하트
 		b = b + 1;
 		ctx.clearRect(0, 0, 5000, 5000);
 		ctx.beginPath();
